# riverpod_3_scanner

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTORS.md  DISCORD_ANNOUNCEMENT.md  GUIDE.md  LICENSE  PACKAGE_INFO.md  PUBLISHING.md  README.md  REDDIT_ANNOUNCEMENT.md  install.sh  pyproject.toml  riverpod_3_scanner.py  setup.py
.github/workflows/: tests.yml
riverpod_3_scanner/: __init__.py  analysis.py  checkers.py  models.py  output.py  scanner.py  utils.py
tests/: test_fixtures.py  test_scanner.py  test_utils.py
tests/fixtures/: async_star_provider_passing.dart  async_star_provider_violations.dart  catch_block_passing.dart  catch_block_violations.dart  event_handler_params_passing.dart  event_handler_params_violations.dart  field_caching_bang_passing.dart  field_caching_bang_violations.dart  hook_consumer_widget_passing.dart  hook_consumer_widget_violations.dart  offframe_async_passing.dart  offframe_async_violations.dart  ref_into_plain_class_passing.dart  ref_into_plain_class_violations.dart  state_access_passing.dart  state_access_violations.dart  state_assign_await_passing.dart  state_assign_await_violations.dart
